--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
       padding: 20px;
       max-width: 300px;
       margin: 30px auto;
+      margin-top: 45px;
       border-radius: 20px;
       box-shadow: 0 0 15px rgba(0,0,0,0.1);
       z-index: 1;
